--- a/tippery/Base.lproj/Main.storyboard
+++ b/tippery/Base.lproj/Main.storyboard
@@ -1,24 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EjO-4b-zJU">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tip Calculator-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tippery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PuZ-lk-ie6">
+                                <rect key="frame" x="0.0" y="268" width="414" height="468"/>
+                                <color key="backgroundColor" red="1" green="0.5266836439" blue="0.054180070900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Tips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yr0-Ry-xbW">
+                                <rect key="frame" x="16" y="107" width="99" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="99" id="XsZ-ts-8yH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MrO-9I-k7T">
+                                <rect key="frame" x="207" y="115" width="193" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="M3z-Ew-upB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Enter Here $" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Lv-ha-v97">
+                                <rect key="frame" x="0.0" y="327" width="391" height="121"/>
+                                <color key="backgroundColor" red="1" green="0.99636936773440088" blue="0.98133766126685673" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="1" green="0.52668364386971889" blue="0.054180070901803989" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="50"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <action selector="calTip:" destination="BYZ-38-t0r" eventType="editingChanged" id="6Gz-42-V6Z"/>
+                                </connections>
+                            </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3tJ-bf-kqE">
+                                <rect key="frame" x="16" y="291" width="375" height="29"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.78240047089041098" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="EVy-0S-95c"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="10%"/>
+                                    <segment title="15%"/>
+                                    <segment title="20%"/>
+                                </segments>
+                                <connections>
+                                    <action selector="calTip:" destination="BYZ-38-t0r" eventType="valueChanged" id="B1y-p6-sdf"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Payment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRr-B0-N2B">
+                                <rect key="frame" x="16" y="197" width="145" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Msi-lB-9e6">
+                                <rect key="frame" x="207" y="201" width="193" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="6ya-jj-fIL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="yr0-Ry-xbW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="43" id="4Vm-tp-f04"/>
+                            <constraint firstItem="yr0-Ry-xbW" firstAttribute="leading" secondItem="gRr-B0-N2B" secondAttribute="leading" id="BD6-M5-AzK"/>
+                            <constraint firstItem="PuZ-lk-ie6" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="CPN-GY-aRH"/>
+                            <constraint firstItem="PuZ-lk-ie6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Evl-LR-Gmr"/>
+                            <constraint firstItem="3tJ-bf-kqE" firstAttribute="top" secondItem="gRr-B0-N2B" secondAttribute="bottom" constant="65" id="F2w-ue-9tS"/>
+                            <constraint firstItem="PuZ-lk-ie6" firstAttribute="leading" secondItem="1Lv-ha-v97" secondAttribute="leading" id="HFz-3N-4wv"/>
+                            <constraint firstAttribute="trailing" secondItem="PuZ-lk-ie6" secondAttribute="trailing" id="Izw-HW-olu"/>
+                            <constraint firstItem="1Lv-ha-v97" firstAttribute="top" secondItem="3tJ-bf-kqE" secondAttribute="bottom" constant="8" symbolic="YES" id="KCe-Kd-DvG"/>
+                            <constraint firstItem="PuZ-lk-ie6" firstAttribute="top" secondItem="gRr-B0-N2B" secondAttribute="bottom" constant="42" id="PUE-i0-7tW"/>
+                            <constraint firstItem="gRr-B0-N2B" firstAttribute="firstBaseline" secondItem="Msi-lB-9e6" secondAttribute="firstBaseline" id="UGH-ak-WNV"/>
+                            <constraint firstItem="gRr-B0-N2B" firstAttribute="leading" secondItem="3tJ-bf-kqE" secondAttribute="leading" id="bON-Yx-JuP"/>
+                            <constraint firstItem="yr0-Ry-xbW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="cg4-q2-DNj"/>
+                            <constraint firstItem="3tJ-bf-kqE" firstAttribute="trailing" secondItem="1Lv-ha-v97" secondAttribute="trailing" id="dhv-TR-GJT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3tJ-bf-kqE" secondAttribute="trailing" constant="23" id="gI0-YO-jjw"/>
+                            <constraint firstItem="MrO-9I-k7T" firstAttribute="leading" secondItem="yr0-Ry-xbW" secondAttribute="trailing" constant="92" id="ij8-Is-ig0"/>
+                            <constraint firstItem="gRr-B0-N2B" firstAttribute="top" secondItem="yr0-Ry-xbW" secondAttribute="bottom" constant="61" id="mVv-qm-jt1"/>
+                            <constraint firstItem="yr0-Ry-xbW" firstAttribute="baseline" secondItem="MrO-9I-k7T" secondAttribute="baseline" id="p8R-Ad-RTg"/>
+                            <constraint firstItem="MrO-9I-k7T" firstAttribute="trailing" secondItem="Msi-lB-9e6" secondAttribute="trailing" id="sGg-xC-C4g"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1Lv-ha-v97" secondAttribute="bottom" constant="288" id="xWN-1a-PAZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MrO-9I-k7T" secondAttribute="trailing" constant="14" id="y09-6B-pR5"/>
+                            <constraint firstItem="MrO-9I-k7T" firstAttribute="leading" secondItem="Msi-lB-9e6" secondAttribute="leading" id="yGA-gC-fN1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="gOv-TM-Aa8" appends="YES" id="Ig0-hY-7Wy"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" title="Tip Calculator" id="8sE-2m-bXz"/>
+                    <connections>
+                        <outlet property="billLabel" destination="1Lv-ha-v97" id="zab-23-mKG"/>
+                        <outlet property="presetPercent" destination="3tJ-bf-kqE" id="4iH-UT-c6X"/>
+                        <outlet property="tipAmt" destination="MrO-9I-k7T" id="W5U-fL-Gr7"/>
+                        <outlet property="totalAmt" destination="Msi-lB-9e6" id="KOz-Ta-BoD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="gOv-TM-Aa8">
+                    <connections>
+                        <action selector="onTap:" destination="BYZ-38-t0r" id="e9c-Ch-Rmk"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="1228.985507246377" y="-55.434782608695656"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="RNW-ZH-JMQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EjO-4b-zJU" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QbK-qd-fzw">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="0uA-kG-fDd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OUu-3z-Pcb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="518" y="-55"/>
         </scene>
     </scenes>
 </document>
